--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,9 +10,9 @@ variables:
     curl https://www.mpi-hd.mpg.de/personalhomes/globes/download/globes-3.2.17.tar.gz | tar xvz
     cd globes-3.2.17
     ./configure
-    sudo make
-    sudo make install
-    sudo ldconfig
+    make
+    make install
+    ldconfig
     globes-config --include
     pip install cffi
 
