--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -87,7 +87,7 @@ steps:
   displayName: pip cibuildwheel
   failOnStderr: false
 
-- bash: cibuildwheel --output-dir wheelhouse
+- bash: cibuildwheel --platform linux --output-dir wheelhouse
   workingDirectory: $(System.DefaultWorkingDirectory)
   displayName: run cibuildwheel with output ./wheelhouse
   failOnStderr: false
