--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,7 +6,7 @@ variables:
   CIBW_SKIP: cp27-*
   CIBW_BUILD_VERBOSITY: 3
   CIBW_BEFORE_BUILD: |
-    apt-get install -y libgsl-dev
+    apk add --update libgsl-dev
     curl https://www.mpi-hd.mpg.de/personalhomes/globes/download/globes-3.2.17.tar.gz | tar xvz
     cd globes-3.2.17
     ./configure
