--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,7 +3,7 @@ pool:
   vmImage: 'ubuntu-16.04'
 
 variables:
-  CIBW_SKIP: cp27-*
+  CIBW_BUILD: cp37
   CIBW_BUILD_VERBOSITY: 3
   CIBW_BEFORE_BUILD: |
     yum install -y gsl-devel && pip install .
