--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,15 @@
 
 pool:
   vmImage: 'ubuntu-16.04'
+strategy:
+  matrix:
+    Python35:
+      python.version: '3.5'
+    Python36:
+      python.version: '3.6'
+    Python37:
+      python.version: '3.7'
+  maxParallel: 3
 
 variables:
   CIBW_BUILD: cp37
@@ -13,14 +22,17 @@ variables:
     make
     make install
     ldconfig
+    echo $PATH
     globes-config --include
     pip install cffi
 
 steps:
 
 - task: UsePythonVersion@0
+  displayName: set python version # string  # friendly name displayed in the UI
   inputs:
-    versionSpec: '3.7'
+    versionSpec: '$(python.version)' #'3.x'
+    addToPath: true
 
 #- bash: sudo apt-get update && sudo apt-get install -y libgsl-dev
 #  workingDirectory: $(System.DefaultWorkingDirectory)
