--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -109,6 +109,11 @@ steps:
   displayName: ls
   failOnStderr: false
 
+- bash: ls -la
+  workingDirectory: $(System.DefaultWorkingDirectory)/wheelhouse
+  displayName: ls
+  failOnStderr: false
+
 
 - task: PublishBuildArtifacts@1
   inputs: {pathtoPublish: 'wheelhouse'}
