--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ strategy:
   maxParallel: 3
 
 variables:
-  CIBW_SKIP: cp27
+  CIBW_SKIP: cp27-*
   CIBW_BUILD_VERBOSITY: 3
   CIBW_BEFORE_BUILD: |
     yum install -y gsl-devel && pip install .
