--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ jobs:
       Python37:
         python.version: '3.7'
     maxParallel: 3
-    
+
   variables:
     CIBW_SKIP: cp27 cp34
     CIBW_BUILD_VERBOSITY: 3
@@ -31,7 +31,7 @@ jobs:
   steps:
 
   - task: UsePythonVersion@0
-    displayName: set python version # string  # friendly name displayed in the UI
+    displayName: set python version
     inputs:
       versionSpec: '$(python.version)' #'3.x'
       addToPath: true
@@ -118,3 +118,39 @@ jobs:
 
   - task: PublishBuildArtifacts@1
     inputs: {pathtoPublish: 'wheelhouse'}
+
+- job: mac
+  pool: {vmImage: 'macOS-10.13'}
+
+  strategy:
+    matrix:
+      Python35:
+        python.version: '3.5'
+      Python36:
+        python.version: '3.6'
+      Python37:
+        python.version: '3.7'
+    maxParallel: 3
+
+  variables:
+    CIBW_SKIP: cp27 cp34
+    CIBW_BUILD_VERBOSITY: 3
+    CIBW_BEFORE_BUILD: |
+      yum install -y gsl-devel && pip install .
+      curl https://www.mpi-hd.mpg.de/personalhomes/globes/download/globes-3.2.17.tar.gz | tar xvz
+      cd globes-3.2.17
+      ./configure
+      make
+      make install
+      ldconfig
+      echo $PATH
+      globes-config --include
+      pip install cffi
+
+  steps:
+
+  - task: UsePythonVersion@0
+    displayName: set python version
+    inputs:
+      versionSpec: '$(python.version)' #'3.x'
+      addToPath: true
