--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,7 @@ jobs:
 
   variables:
     CIBW_SKIP: cp27 cp34
+    CIBW_BUILD: cp37 cp36
     CIBW_BUILD_VERBOSITY: 3
     CIBW_BEFORE_BUILD: |
       yum install -y gsl-devel && pip install .
@@ -133,6 +134,7 @@ jobs:
 
   variables:
     CIBW_SKIP: cp27 cp34
+    CIBW_BUILD: cp37 cp36
     CIBW_BUILD_VERBOSITY: 3
     CIBW_BEFORE_BUILD: |
       brew install gsl && pip install .
