--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -137,7 +137,8 @@ jobs:
     CIBW_BUILD: cp37 cp36
     CIBW_BUILD_VERBOSITY: 3
     CIBW_BEFORE_BUILD: |
-      brew install gsl && pip install .
+      brew install gsl && brew install argp-standalone
+      pip install .
       curl https://www.mpi-hd.mpg.de/personalhomes/globes/download/globes-3.2.17.tar.gz | tar xvz
       cd globes-3.2.17
       ./configure
