--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,8 +13,7 @@ jobs:
 #    maxParallel: 3
 
   variables:
-    CIBW_SKIP: cp27 cp34
-    CIBW_BUILD: cp37 cp36
+    CIBW_SKIP: cp27-* cp34-*
     CIBW_BUILD_VERBOSITY: 3
     CIBW_BEFORE_BUILD: |
       yum install -y gsl-devel && pip install .
@@ -133,8 +132,7 @@ jobs:
 #    maxParallel: 3
 
   variables:
-    CIBW_SKIP: cp27 cp34
-    CIBW_BUILD: cp37 cp36
+    CIBW_SKIP: cp27-* cp34-*
     CIBW_BUILD_VERBOSITY: 3
     CIBW_BEFORE_BUILD: |
       brew install gsl && brew install argp-standalone
